update swagger and change popup styles
