# src/swagger/api/index.ts
@@ -9,6 +9,7 @@ export type { OpenAPIConfig } from './core/OpenAPI';
 export type { CreateFolderDto } from './models/CreateFolderDto';
 export type { CreateNoteReqDto } from './models/CreateNoteReqDto';
 export type { CreateOneTimeNotificationDto } from './models/CreateOneTimeNotificationDto';
+export { CreateReoccurringNotificationDto } from './models/CreateReoccurringNotificationDto';
 export type { FolderModel } from './models/FolderModel';
 export type { FolderWithNotes } from './models/FolderWithNotes';
 export type { GetAllUserFoldersResDTO } from './models/GetAllUserFoldersResDTO';
@@ -17,6 +18,8 @@ export type { LoginReqDTO } from './models/LoginReqDTO';
 export type { LoginResDTO } from './models/LoginResDTO';
 export type { NoteModel } from './models/NoteModel';
 export type { NotesSummaryResDto } from './models/NotesSummaryResDto';
+export type { NotificationDto } from './models/NotificationDto';
+export { NotificationModel } from './models/NotificationModel';
 export type { SignupReqDTO } from './models/SignupReqDTO';
 export type { UpdateFolderDto } from './models/UpdateFolderDto';
 export type { UpdateNoteReqDto } from './models/UpdateNoteReqDto';
