# src/swagger/api/models/NotificationDto.ts
@@ -1,0 +1,9 @@
+/* istanbul ignore file */
+/* tslint:disable */
+/* eslint-disable */
+
+import type { NotificationModel } from './NotificationModel';
+
+export type NotificationDto = {
+    notification?: NotificationModel;
+};
